# nx-lyve-cloud-plugin

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Doxyfile  LICENSE  NOTICE  README.md  SECURITY.md  build_plugin.bat  build_plugin.sh  build_plugin_arm32.sh  build_plugin_arm64.sh  build_plugin_arm64_edge_camera.sh  build_plugin_x64.sh  build_samples.bat  build_samples.sh  build_samples_arm32.sh  build_samples_arm64.sh  build_samples_x64.sh  child_process.cpp  child_process.h  child_process_linux.cpp  child_process_windows.cpp  install_plugin_edge_linux.sh  install_plugin_linux.sh  install_plugin_windows.bat  main.cpp  setup_fuse_allow_other.sh  toolchain_arm32.cmake  toolchain_arm64.cmake  toolchain_x64.cmake
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cmake-build.yml  codespell.yml  lint.yml  release.yml
dependencies/nx_kit/: CMakeLists.txt  build.bat
nx_kit/unit_tests/: CMakeLists.txt
samples/cloudfuse_plugin/: CMakeLists.txt  CMakePresets.json  vcpkg.json
samples/stub_analytics_plugin/: CMakeLists.txt
samples/unit_tests/: CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  CMakePresets.json  child_process.h  child_process_linux.cpp  child_process_windows.cpp  vcpkg.json
src/cloudfuse/: child_process.cpp  child_process.h  child_process_linux.cpp  child_process_windows.cpp
src/cloudfuse/src/: child_process.h  child_process_linux.cpp  child_process_windows.cpp
src/lib/: nx_sdk_version.inc
src/lib/cloudfuse/: child_process.cpp  child_process.h  child_process_linux.cpp  child_process_windows.cpp
src/lib/nx/sdk/: dynamic_libraries.md  i_action_response.h  i_active_setting_changed_action.h  i_active_setting_changed_response.h  i_attribute.h  i_device_info.h  i_list.h  i_plugin.h  i_plugin_diagnostic_event.h  i_ref_countable.h  i_settings_response.h  i_string.h  i_string_list.h  i_string_map.h  i_utility_provider.h  interface.h  ptr.h  result.h  settings_model.md  uuid.h
src/lib/nx/sdk/analytics/: i_action.h  i_compound_metadata_packet.h  i_compressed_media_packet.h  i_compressed_video_packet.h  i_consuming_device_agent.h  i_custom_metadata_packet.h  i_data_packet.h  i_device_agent.h  i_engine.h  i_engine_info.h  i_event_metadata.h  i_event_metadata_packet.h  i_media_context.h  i_metadata.h  i_metadata_packet.h  i_metadata_types.h  i_motion_metadata_packet.h  i_object_metadata.h  i_object_metadata_packet.h  i_object_track_best_shot_packet.h  i_object_track_info.h  i_plugin.h  i_timestamped_object_metadata.h  i_uncompressed_media_frame.h  i_uncompressed_video_frame.h  manifests.md  point.h  rect.h  taxonomy.md
src/lib/nx/sdk/analytics/helpers/: consuming_device_agent.cpp  consuming_device_agent.h  engine.cpp  engine.h  engine_info.cpp  engine_info.h  event_metadata.cpp  event_metadata.h  event_metadata_packet.cpp  event_metadata_packet.h  metadata_types.cpp  metadata_types.h  object_metadata.cpp  object_metadata.h  object_metadata_packet.cpp  object_metadata_packet.h  object_track_best_shot_packet.cpp  object_track_best_shot_packet.h  object_track_info.cpp  object_track_info.h  pixel_format.cpp  pixel_format.h  plugin.cpp  plugin.h  timestamped_object_metadata.cpp  timestamped_object_metadata.h
src/lib/nx/sdk/helpers/: action_response.cpp  action_response.h  active_setting_changed_action.cpp  active_setting_changed_action.h  active_setting_changed_response.cpp  active_setting_changed_response.h  attribute.cpp  attribute.h  device_info.cpp  device_info.h  error.cpp  error.h  i_ref_countable_registry.h  lib_context.cpp  lib_context.h  lib_context.md  list.h  log_utils.cpp  log_utils.h  media_stream_statistics.cpp  media_stream_statistics.h  plugin_diagnostic_event.cpp  plugin_diagnostic_event.h  ref_countable.h  settings_response.cpp  settings_response.h  string.cpp  string.h  string_list.cpp  string_list.h  string_map.cpp  string_map.h  to_string.cpp  to_string.h  uuid_helper.cpp  uuid_helper.h
src/nx/sdk/: settings_model.md
src/nx/sdk/analytics/: taxonomy.md
src/nx/sdk/analytics/helpers/: engine.cpp
src/nx/sdk/helpers/: lib_context.md
src/plugin/: main.cpp  utils.cpp  utils.h
src/plugin/settings/: actions.cpp  active_settings_builder.cpp  active_settings_builder.h  active_settings_rules.cpp  device_agent.cpp  device_agent.h  engine.cpp  engine.h  plugin.cpp  plugin.h  settings_model.h  stub_analytics_plugin_settings_ini.cpp  stub_analytics_plugin_settings_ini.h
src/unit_tests/: CMakeLists.txt  CMakePresets.json
src/unit_tests/src/: analytics_plugin_ut.cpp
tools/: format.sh
tools/key-generation/: README  config.flow  flow  jp  list-disable-enable-bucket  xp
tools/subscription/: README.md  cumulus-subscription-v1.schema.json  exampleProvisioningOutput.json  exampleSubscriptionInfo.json  extractRawPublicKey.py  extractSubscription.py  requirements.txt  setSubscriptionCapacity.py  signSubscription.py  verifySignature.py
unit_tests/src/: main.cpp  ptr_ut.cpp  (+2 more)
(+41 files in other folders)
